# vrl

./: .gitignore  README.md  journal.randomformat  kinetics-videomae-dismo.ipynb  pyproject.toml  report_en.md
configs/: README.md  ssv2_videomae_50c_perturbation_matrix.json  ssv2_videomae_50c_train.json  ssv2_videomae_50c_validation.json  ssv2_videomae_perturbation_matrix.json  ssv2_videomae_smoke.json
scripts/: audit_quan_solar.py  build_dinov2_3x2_summary.py  build_diving48_3x3_summary.py  build_full_matrix_summary.py  copy_label_videos.py  copy_label_videos_all.py  fetch_kinetics_cvdf_subset.py  orchestrate_kinetics_pod1.sh  organize_hmdb51_split.py  render_full_matrix_pngs.py  run_cell_pipeline.sh  run_kinetics_extraction_pipeline.sh  run_kinetics_index_rebuild_slurm.sh  run_pod_matrix_pipeline.sh  run_slurm_cell_pipeline.sh  visualize_quan_solar.py
sh/: quan_solar_slurm.sh
src/: __init__.py  artifact_alignment.py  artifacts.py  baseline_interpretability.py  config.py  embedding_extraction.py  embedding_sensitivity.py  knn_baseline.py  knn_perturbation_analysis.py  perturbation_sweeps.py  reporting.py  reproducibility.py  ssv2_dataset.py  ssv2_index.py  video_io.py  video_perturbations.py  video_sanity_check.py  videomae_model.py  videomae_model_sanity_check.py  videomae_preprocessing.py
tests/: test_artifact_alignment.py  test_baseline_interpretability.py  test_bootstrap.py  test_data_records.py  test_dependency_boundaries.py  test_dinov2_linear_probe_configs.py  test_dinov2_model.py  test_dismo_model.py  test_diving48_index.py  test_embedding_extraction.py  (+28 more)
(+784 files in other folders)
