[project]
name = "vrl"
version = "0.1.0"
description = "Video research pipeline for motion and appearance sensitivity experiments."
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=0.30,<2",
    "av>=12.0,<18",
    "numpy>=1.26,<3",
    "torch>=2.3,<3",
    "tqdm>=4.66,<5",
    "transformers>=4.40,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
